# rust_7ex

./: README.md
rata_rag_1/: Cargo.toml  README.md
rata_rag_1/src/: main.rs  mod_search.rs
rata_rag_2/: Cargo.toml  README.md
rata_rag_2/src/: main.rs  mod_search.rs
rata_sqlite_1/: Cargo.toml  README.md  sample.cpp
rata_sqlite_1/include/: MyDb.hpp  MyTodo.hpp
rata_sqlite_1/src/: main.rs
rata_todo_1/: Cargo.toml  README.md
rata_todo_1/include/: MyTodo.hpp
rata_todo_1/src/: main.rs
