[package]
name = "rata_rag_1"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = "1.23"
color-eyre = "0.6.3"
crossterm = "0.29.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = {version="0.31.0", features=["bundled"]}
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zerocopy = "0.7.33"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true